# streaming-platform-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  coverage.xml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  format.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
.github/workflows/: ci.yml  python-lint.yml
alembic/: env.py
alembic/versions/: 203f0356148e_users.py  75346eea8c38_stream_thumbnail_url.py  9ed14d623d21_reset_token_expires_at_default_to_none.py  bb925a92aa3c_make_reset_token_expires_at_timezone_.py  c3ddd72c1b24_fix_datetime_defaults.py  cd43ad291612_change_roles_to_role.py  d75533cf955a_streams_model.py  ea39c99bf263_change_role_from_list_to_str.py
app/: initial_data.py  main.py
app/api/: router.py
app/api/endpoints/: auth.py  stream_webhooks.py  streams.py  users.py
app/api/v1/https/: auth.py
app/core/: config.py  deps.py  exceptions.py  permissions.py  rate_limiter.py  redis.py  redis_rate_limiter.py  role_checker.py  security.py
app/crud/: base.py  streams.py  users.py
app/db/: base.py  init_db.py  session.py
app/enums/: permissions.py  users.py
app/models/: __init__.py  streams.py  users.py
app/schemas/: streams.py  users.py
app/services/: streams.py
app/utils/: helper.py
docker/nginx-rtmp/: Dockerfile  nginx.conf
tests/: conftest.py  test_auth.py  test_auth_edge_cases.py
